--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,7 @@
-      - uses: AbsaOSS/k3d-action@v2
+ jobs:
+  some-job:
+    steps:     
+        - uses: AbsaOSS/k3d-action@v2
         name: "Create Single Cluster"
         with:
           cluster-name: "test-cluster-1"
