--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,19 @@
- jobs:
-  job:
-    steps:     
-        - uses: AbsaOSS/k3d-action@v2
-        name: "Create Single Cluster"
-        with:
+# This is a basic workflow to help you get started with Actions
+
+name: CI
+
+on:
+  push:
+    branches: [ main ]
+jobs:  
+  build:
+    name: Create k3d cluster
+    runs-on: ubuntu-latest
+
+    steps:
+     - uses: AbsaOSS/k3d-action@v2
+       name: "Create Single Cluster"
+       with:
           cluster-name: "test-cluster-1"
           args: >-
             -p "8083:80@agent:0:direct"
@@ -13,3 +23,4 @@
             --no-lb
             --image docker.io/rancher/k3s:v1.20.4-k3s1
             --k3s-arg "--no-deploy=traefik,servicelb,metrics-server@server:*"
+   
