--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
         run: |
           docker build . -t davarski/demo:v1.0.0
           k3d image import davarski/demo:v1.0.0 -c CI-test-cluster --verbose
-          ## kubectl apply -f pod.yaml
+          kubectl run demo --image=demo:v1.0.0 --restart=Never
 
      
