--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 jobs:  
   run-k8d:
-    name: Create k3d cluster
+    name: Create k3d cluster and deploy app
     runs-on: ubuntu-latest
 
     steps:
